added folders and files

--- a/draft/css/styles.css
+++ b/draft/css/styles.css
@@ -1,75 +1,252 @@
-* {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-  }
-body {
-    font-size: 16px;
-    font-family: 'Playfair Display', serif;
-}
 .wrapper {
-    max-width: 900px;
-    margin: auto;
-    padding-top: 60px;
-    padding-bottom: 60px;
-}
-.nav {
-    text-align: center;
-    margin-bottom: 90px;
-  }
-.nav li {
-    display: inline-block;
-    margin-right: 90px;
-}
-.nav a {
-    text-decoration: none;
-    color: grey;
-    text-transform: uppercase;
-}
-  .nav a:hover {
-    background-color: grey;
-    color: white;
-}
-.article {
-    display: inline-block;
-    width: 420px;
-    margin-right: 26px;
-    margin-bottom: 140px;
-    margin-left: 0px;   
-}
-.article img {
-    margin-bottom: 30px;
-    display: block;
-}
-.article h2 {
-    margin-bottom: 40px;
-    display: block;
-    color: grey;
-    font-size: 30px;
-    text-align: left;
-}
-.article span {
-    display: block;
-    margin-bottom: 30px;
-    text-transform: uppercase;
-    text-align: left;
-    color: gray;
-}
-.article p {
-    text-align: left;
-    color: grey;
-}
-.bottom_p {
-    margin-bottom: -100px;
-}
-input {
+    width: 1110px;
     margin: 0 auto;
+    padding-top: 35px;
+  }
+  
+  .header {
+    margin-bottom: 110px;
+  }
+  
+  .logo a {
+    font-family: 'Roboto', sans-serif;
+    font-size: 30px;
+    font-weight: 300;
+    float: left;
+    text-transform: uppercase;
+    color: #555252;
+    text-decoration: none;
+    text-align: center;
+  }
+  
+  .logo a:first-letter {
+    font-family: 'Roboto', sans-serif;
+    font-weight: 900;
+    font-size: 30px;
+    text-transform: uppercase;
+    color: #1abc9c;
+  }
+  
+  .nav {
+    float: right;
+  }
+  
+  .nav a{
+    font-family: 'Open Sans', sans-serif;
+    font-size: 14px;
+    font-weight: 900;
+    color: #0f0101;
+    text-transform: uppercase;
+    text-decoration: none;
+    line-height: 30px;
+  }
+  
+  .nav a:hover {
+    color: #1abc9c;
+  }
+  
+  .contact,
+  .blog,
+  .shop,
+  .page,
+  .about,
+  .home {
+    float: left;
+    height: 30px;
+    margin-left: 30px;
+  }
+  
+  .clearfix::after {
+    content: "";
     display: block;
-    border: 1 px solid;
-    cursor: pointer;
+    clear: both;
+  }
+  
+  .section1 h2 {
+    font-family: 'Roboto', sans-serif;
+    font-weight: 900;
+    font-size: 48px;
+    text-transform: uppercase;
+    color: #515151;
+    text-align: center;
+    margin-bottom: 92px;
+  }
+  
+  .section1 {
+    margin-bottom: 105px;
+  }
+  
+  .section2 {
+    margin-bottom: 80px;
+  }
+  
+  .section1 h2::after {
+    content: '';
+    display: block;
+    width: 164px;
+    height: 7px;
+    margin: 20px auto 0;
+    background-color: rgb(26,188,156);
+  }
+  
+  .section2 h2::after {
+    content: '';
+    display: block;
+    width: 164px;
+    height: 7px;
+    margin: 20px auto 0;
+    background-color: rgb(26,188,156);
+  }
+  
+  .product1,
+  .product2,
+  .product3,
+  .product4,
+  .product5,
+  .product6,
+  .product7,
+  .product8 {
+    width: 22.972973%;
+    float: left;
+    background-color: rgb(233,240,253);
+    margin-bottom: 30px;
+  }
+  
+  .product1:hover > .name,
+  .product2:hover > .name,
+  .product3:hover > .name,
+  .product4:hover > .name,
+  .product5:hover > .name,
+  .product6:hover > .name,
+  .product7:hover > .name,
+  .product8:hover > .name {
+    background-color: rgb(26,188,156);
+  }
+  
+  .product1:hover > .price,
+  .product2:hover > .price,
+  .product3:hover > .price,
+  .product4:hover > .price,
+  .product5:hover > .price,
+  .product6:hover > .price,
+  .product7:hover > .price,
+  .product8:hover > .price {
+    background-color: rgb(127,217,199);
+  }
+  
+  .product2,
+  .product3,
+  .product4,
+  .product6,
+  .product7,
+  .product8 {
+    margin-left: 2.7%;
+  }
+  
+  .name {
+    width: 188px;
+    height: 40px;
+    padding-left: 12px;
+    font-family: 'Roboto', sans-serif;
+    font-weight: 900;
+    font-size: 18px;
+    text-transform: uppercase;
+    color: #ffffff;
+    text-align: left;
+    line-height: 40px;
+    background-color: rgb(50,50,50);
+    float: left;
+  }
+  
+  .price {
+    width: 43px;
+    height: 40px;
+    padding-left: 12px;
+    font-family: 'Roboto', sans-serif;
+    font-weight: 900;
+    font-size: 18px;
+    text-transform: uppercase;
+    color: rgb(255,255,255);
+    text-align: left;
+    line-height: 40px;
+    background-color: rgb(140,140,140);
+    float: right;
+  }
+  
+  .section2 h2 {
+    font-family: 'Roboto', sans-serif;
+    font-weight: 900;
+    font-size: 48px;
+    text-transform: uppercase;
+    color: #555252;
+    text-align: center;
+    margin-bottom: 92px;
+  }
+  
+  .article1,
+  .article2,
+  .article3 {
+    float: left;
+    width: 31.5315%;
+  }
+  
+  .article2,
+  .article3 {
+    margin-left: 2.7027%;
+  }
+  
+  .article1 h4,
+  .article2 h4,
+  .article3 h4 {
+    display: inline-block;
+    font-size: 18px;
+    font-family: "OpenSans";
+    font-weight: 600;
+    color: rgb(85, 82, 82);
+    line-height: 1.444;
+    margin-bottom: 30px;
+  }
+  
+  .article1 h4::after,
+  .article2 h4::after,
+  .article3 h4::after {
+    content: '';
+    display: block;
+    width: 136px;
+    height: 3px;
+    background-color: rgb(26,188,156);
+  }
+  
+    .article1 img,
+    .article2 img,
+    .article3 img {
+    display: inline-block;
+    margin-bottom: 15px;
+  }
+  
+  .article1 p,
+  .article2 p,
+  .article3 p {
+    display: inline-block;
+    margin-bottom: 20px;
+    font-size: 14px;
+    font-family: "OpenSans";
+    color: rgb(85, 82, 82);
+    font-weight: 400;
+    line-height: 1.857;
+  }
+  
+  button {
     width: 160px;
-    height: 60px;
-    font-size: 20px;
-    background-color: white;
-    color: grey;
+    height: 50px;
+    background-color: rgb(78,198,171);
+    border: 0;
+    border-radius: 5px;
+    box-shadow: none;
+    display: inline-block;
+    font-size: 16px;
+    font-family: "Open Sans";
+    font-weight: 300;
+    color: rgb(255, 255, 255);
+    text-align: center;
   }
