--- a/html-css/module-09/css/desktop.css
+++ b/html-css/module-09/css/desktop.css
@@ -4,7 +4,7 @@
       margin: 0 auto;
     }
   
-    .top-wrap {
+    .main_wrapper {
       width: 1440px;
       background-image: url(../images/desktop.jpg);
       background-size: cover;
