--- a/html-css/module-09/css/mobile.css
+++ b/html-css/module-09/css/mobile.css
@@ -15,7 +15,7 @@
     padding: 0;
   }
   
-  .top-wrap {
+  .main_wrapper {
     background-image: url(../images/mobile.jpg);
     background-size: cover;
     margin: 0 auto;
