--- a/html-css/module-09/css/tablet.css
+++ b/html-css/module-09/css/tablet.css
@@ -4,7 +4,7 @@
       margin: 0 auto;
     }
   
-    .top-wrap {
+    .main_wrapper {
       background-image: url(../images/tablet.jpg);
       background-size: cover;
       margin-bottom: 4.375rem;
